# Sentinel-Ops

./: .gitignore  CHANGELOG.md  Makefile  README.md  alembic.ini  pyproject.toml
app/: main.py
dashboard/: app.py
docs/: API_SPEC.md  ARCHITECTURE.md  DASHBOARD.md  DATA_MODEL.md  DECISIONS.md  DEMO.md  EVENT_MODEL.md  INTELLIGENCE_LAYER.md  OPERATING_GUIDE.md  ROADMAP.md  SCORING_MODEL.md  SECURITY_MODEL.md  SPRINT_2_ASSURANCE_LAYER.md  STRESS_TEST.md  SYSTEM_OVERVIEW.md  TRM_ALIGNMENT.md  VALIDATION_ENGINE.md  VERIFICATION_REPORT.md
docs/adr/: ADR-0001-event-sourcing.md  ADR-0002-deterministic-hashing.md  ADR-0003-human-in-the-loop.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: init_db.py  seed_demo.py  simulate_failure.py
sentinel/: db.py  events.py  hashing.py  models.py  replay.py  schemas.py  scoring.py  validation.py
sentinel/intelligence/: __init__.py  evidence_analyzer.py  models.py  rules.py
tests/: test_event_replay.py  test_evidence_analysis.py  test_invariants.py  test_step3_schema_hashing.py  test_step4_cases_submit.py  test_step5_step6_workflow.py  test_step7_export.py  test_verification_contracts.py
